--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,28 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-08 14:32:32 -0400 
+%% Created for Pete Su at 2023-08-09 07:13:51 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Harlow2016,
+	author = {D. Harlow},
+	date-added = {2023-08-09 07:13:22 -0400},
+	date-modified = {2023-08-09 07:13:51 -0400},
+	doi = {10.1103/revmodphys.88.015002},
+	journal = {Rev. Mod. Phys.},
+	note = {\href{http://arxiv.org/abs/1409.1231v5}{arxiv:1409.1231v5}},
+	number = {1},
+	publisher = {American Physical Society ({APS})},
+	title = {{Jerusalem Lectures on Black Holes and Quantum Information}},
+	url = {https://doi.org/10.1103%2Frevmodphys.88.015002},
+	volume = {88},
+	year = 2016,
+	bdsk-url-1 = {https://doi.org/10.1103%2Frevmodphys.88.015002},
+	bdsk-url-2 = {https://doi.org/10.1103/revmodphys.88.015002}}
 
 @article{Giddings2022,
 	author = {Steven B. Giddings and Julie Perkins},
@@ -7909,23 +7925,6 @@
 	volume = {B48},
 	year = {2014},
 	bdsk-url-1 = {https://doi.org/10.1016/j.shpsb.2014.03.002}}
-
-@article{Harlow2016,
-	archiveprefix = {arXiv},
-	author = {Harlow, Daniel},
-	date-added = {2019-03-04 08:10:52 -0500},
-	date-modified = {2023-08-08 07:28:00 -0400},
-	doi = {10.1103/RevModPhys.88.015002},
-	eprint = {1409.1231},
-	journal = {Rev. Mod. Phys.},
-	note = {\href{https://arxiv.org/abs/1409.1231}{arxiv:1409.1231}},
-	pages = {015002},
-	primaryclass = {hep-th},
-	slaccitation = {%%CITATION = ARXIV:1409.1231;%%},
-	title = {{Jerusalem Lectures on Black Holes and Quantum Information}},
-	volume = {88},
-	year = {2016},
-	bdsk-url-1 = {https://doi.org/10.1103/RevModPhys.88.015002}}
 
 @article{Marolf:2017jkr,
 	archiveprefix = {arXiv},
