--- a/1409.1231v5/jerusalemarxivv5.tex
+++ b/1409.1231v5/jerusalemarxivv5.tex
@@ -23,6 +23,19 @@
 \newcommand{\mO}{\mathcal{O}}
 \newcommand{\tO}{\widetilde{\mathcal{O}}}
 \newcommand{\wt}{\widetilde}
+
+\usepackage[noBBpl,sc]{mathpazo}
+\linespread{1.1}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.7in, bottom=.9in]{geometry}
+\sloppy
+\raggedbottom
+\usepackage[small]{titlesec}
+\titlelabel{\thetitle.\quad}
+
+
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
 \begin{document}
 %\subheader{blank}
 \title{Jerusalem Lectures on Black Holes and Quantum Information}
@@ -32,6 +45,9 @@
 \emailAdd{dharlow@princeton.edu}
 \abstract{In these lectures I give an introduction to the quantum physics of black holes, including recent developments based on quantum information theory such as the firewall paradox and its various cousins.  I also give an introduction to holography and the AdS/CFT correspondence, focusing on those aspects which are relevant for the black hole information problem.}
 \maketitle
+
+\newpage
+
 \section{Introduction}
 Black holes are fascinating objects in quantum gravity.  Starting from fairly mundane initial conditions (such as a collapsing star), nature is able to produce a geometry that amplifies short-distance fluctuations to macroscopic sizes.  This ``stretching'' of spacetime circumvents the Wilsonian decoupling of high energy physics from low energy physics, making deep questions of Planck-scale dynamics  relevant for low-energy (thought) experiments.\footnote{This amplification is also present in an expanding universe, and it seems likely that a complete understanding of black hole physics will lead to valuable lessons for quantum cosmology.}  Indeed in an extraordinary pair of classic papers \cite{Hawking:1974sw,Hawking:1976ra}, Stephen Hawking argued first that this stretching of fluctuations causes black holes to evaporate and second that the evaporation process is inconsistent with the quantum mechanical principle that pure states always evolve to other pure states.  This conclusion is usually called the \textit{Black Hole Information Problem}, and it has instigated a huge amount of research in the almost 40 years since Hawking's papers.  Is information indeed lost?  If not, then what is the nature of the Planckian interference that prevents it?  Significant progress has been made on these questions, but recent work has emphasized the extent to which we still do not have satisfactory answers to them.  
 
@@ -272,9 +288,11 @@ In fact a massless scalar field enjoys a symmetry larger than just the relativis
 Although the correlation function \eqref{free2pt} is valid only in free scalar field theory, its basic structure of short distance power-law divergence and long distance decay is expected to be true in \textit{any} relativistic QFT.  
 
 We will also eventually want to consider the two-point function when the two fields have different times, but since fields at timelike separation will not necessarily commute we need to be more careful about their ordering.  A particularly nice object is the ``time-ordered'' two-point function $\lan\Omega| T \phi(t,x)\phi(t',y)|\Omega\ran$, which is defined by ordering the fields in such a way that their time increases as we go to the left.  This can be interpreted as a ``transition amplitude'' where we act on the vacuum with a field $\phi$ at some time, evolve forward for a while, and then compute the projection onto the state we would have gotten by acting on the vacuum at the later time.  For our free massive scalar theory the time-ordered two-point function is
-\be\label{to2pt}
-\lan\Omega| T \phi(t,x)\phi(t',y)|\Omega\ran=\frac{1}{4\pi^2}\frac{m}{\sqrt{|x-y|^2-(t-t')^2+i\epsilon}}K_1\left(m \sqrt{|x-y|^2-(t-t')^2+i\epsilon}\right),
-\ee
+\begin{multline}
+\label{to2pt}
+\lan\Omega| T \phi(t,x)\phi(t',y)|\Omega\ran= \\ 
+\frac{1}{4\pi^2}\frac{m}{\sqrt{|x-y|^2-(t-t')^2+i\epsilon}}K_1\left(m \sqrt{|x-y|^2-(t-t')^2+i\epsilon}\right),
+\end{multline}
 where $\epsilon$ is a positive infinitesimal quantity which is there to remind us which branch of the square root we should take when the points are timelike-separated; we should always take $\epsilon\to 0$ in any observable.  
 
 
@@ -545,7 +563,7 @@ For modes whose energy is less than the height of the barrier, in particular tho
 From the effective Schrodinger equation point of view, it is clear that the relation between these two regions is a scattering problem. This is illustrated in figure \ref{schscat}.
 \begin{figure}
 \begin{center}
-\includegraphics[height=5cm]{schscat.pdf}
+\includegraphics[height=4cm]{schscat.pdf}
 \caption{The spacetime interpretation of scattering in the effective Schrodinger potential; on the right is a section of the Schwarzschild Penrose diagram, with the region $-\infty<r_*<r_*$ shaded in grey.}\label{schscat}
 \end{center}
 \end{figure}
@@ -1244,9 +1262,9 @@ Question (1) is answered by the ``dictionary'' of AdS/CFT; the list of CFT expre
 In other words if we extrapolate a bulk field to the boundary, stripping off a normalization factor, then we get a quantity which is exactly described in the CFT as a primary operator with dimension $\Delta$.\footnote{This version of the dictionary, sometimes called the ``extrapolate'' dictionary, was first proposed in \cite{Banks:1998dd}.  Its equivalence to another version \cite{Witten:1998qj,Gubser:1998bc}, sometimes called the ``differentiate'' dictionary, was shown to all orders in perturbation theory in \cite{Harlow:2011ke}.}  In an expectation value of products of bulk operators, the limit in \ref{extdict} should be taken simultaneously for all operators together.\footnote{Other choices of how we scale the operators will lead to CFT correlation functions computed on spaces other than \eqref{cftglobal}.  There are several interesting options, for example we can instead get CFT correlation functions on $\mathbb{R}^d$ (``AdS-Poincare slicing'') or on $\mathbb{R}\times \mathbb{H}^{d-1}$ (``AdS-Rindler slicing''), but I won't describe these in detail here.}
 
 As an example of the extrapolate dictionary, consider a free massive scalar field in AdS.  Its time-ordered two point function is\footnote{See for example \cite{Burgess:1984ti}.  The most elegant way to derive this involves starting with the Euclidean Green's function on the hyperbolic disk, which depends only the geodesic distance and obeys the wave equation, and analytically continuing.  For an example see an analogous calculation for dS space in appendix B of \cite{Harlow:2011ke}.}
-\be
-\lan\Omega|T\phi(x)\phi(x')|\Omega\ran=(2\Delta-d)^{-1}2^{-2\Delta}\pi^{-d/2}\frac{\Gamma(\Delta)}{\Gamma(\Delta-d/2)} u^\Delta F\left(\Delta, \Delta+\frac{1-d}{2},2\Delta-d+1,u\right),
-\ee 
+\begin{multline}
+\lan\Omega|T\phi(x)\phi(x')|\Omega\ran= \\(2\Delta-d)^{-1}2^{-2\Delta}\pi^{-d/2}\frac{\Gamma(\Delta)}{\Gamma(\Delta-d/2)} u^\Delta F\left(\Delta, \Delta+\frac{1-d}{2},2\Delta-d+1,u\right),
+\end{multline}
 where 
 \be
 u=\frac{2}{1+\cosh\ell},
