--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,29 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-09 07:13:51 -0400 
+%% Created for Pete Su at 2023-08-09 15:52:18 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Fankhauser2019,
+	author = {Johannes Fankhauser},
+	date-added = {2023-08-09 15:51:18 -0400},
+	date-modified = {2023-08-09 15:51:23 -0400},
+	doi = {10.12743/quanta.v8i1.88},
+	journal = {Quanta},
+	note = {\href{http://arxiv.org/abs/1707.07884v4}{arxiv:1707.07884v4}},
+	number = {1},
+	pages = {44--56},
+	publisher = {Quanta},
+	title = {Taming the Delayed Choice Quantum Eraser},
+	url = {https://doi.org/10.12743%2Fquanta.v8i1.88},
+	volume = {8},
+	year = 2019,
+	bdsk-url-1 = {https://doi.org/10.12743%2Fquanta.v8i1.88},
+	bdsk-url-2 = {https://doi.org/10.12743/quanta.v8i1.88}}
 
 @article{Harlow2016,
 	author = {D. Harlow},
@@ -3148,10 +3165,10 @@
 	year = {2007},
 	bdsk-url-1 = {https://books.google.com/books?id=%5C_Ok9DwAAQBAJ}}
 
-@article{Gheeraert_2017,
+@article{Gheeraert2017,
 	author = {Nicolas Gheeraert and Soumya Bera and Serge Florens},
 	date-added = {2023-07-26 07:09:59 -0400},
-	date-modified = {2023-07-26 07:10:11 -0400},
+	date-modified = {2023-08-09 15:52:17 -0400},
 	doi = {10.1088/1367-2630/aa5dea},
 	journal = {New J. Phys.},
 	number = {2},
@@ -8818,9 +8835,9 @@ horizon.},
 	year = {2017},
 	bdsk-url-1 = {https://doi.org/10.1016/j.shpsb.2016.10.003}}
 
-@book{Falkenburg:2007,
+@book{Falkenburg2007,
 	author = {Falkenburg, Brigitte},
-	date-modified = {2019-02-09 21:58:41 +0000},
+	date-modified = {2023-08-09 15:51:26 -0400},
 	doi = {10.1007/978-3-540-33732-4},
 	isbn = {978-3-540-33732-4},
 	publisher = {Springer Berlin Heidelberg},
