--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,20 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-09 15:52:18 -0400 
+%% Created for Pete Su at 2023-08-09 16:04:50 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{Grynberg2010,
+	author = {Grynberg, Gilbert and Aspect, Alain and Fabre, Claude},
+	date-added = {2023-08-09 16:04:46 -0400},
+	date-modified = {2023-08-09 16:04:47 -0400},
+	publisher = {Cambridge university press},
+	title = {Introduction to quantum optics: from the semi-classical approach to quantized light},
+	year = {2010}}
 
 @article{Fankhauser2019,
 	author = {Johannes Fankhauser},
