--- a/1707.07884/Taming_the_Delayed_Choice_Quantum_Eraser.tex
+++ b/1707.07884/Taming_the_Delayed_Choice_Quantum_Eraser.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt]{article}
+\documentclass[12pt]{article}
 %\documentclass[aip,jmp,preprint]{article}
 
 %\usepackage[german]{babel}        % Use this package, if you write your report in german
@@ -24,23 +24,60 @@
 \usepackage[listings,theorems]{tcolorbox}
 \usepackage[section]{placeins}
 \usepackage{wrapfig}
-\usepackage{geometry}
 
 \usepackage[utf8]{inputenc} 
 \usepackage[amssymb]{SIunits}
 %\usepackage[section]{placeins}
 %\usepackage[T1]{fontenc} 
-\usepackage{geometry}
 \usepackage{setspace}
 \usepackage{physics}
 \usepackage{authblk}
-\usepackage[bookmarks]{hyperref}
-\geometry{verbose,a4paper,tmargin=25mm,bmargin=25mm,lmargin= 35mm,rmargin=35mm}
-%\geometry{verbose,a4paper,tmargin=25mm,bmargin=25mm,lmargin=17mm,rmargin=17mm}
-\usepackage{titlesec}
-\titleformat*{\section}{\large\bfseries}
-\titleformat*{\subsection}{\normalfont\bfseries}
-\titleformat*{\subsubsection}{\large\bfseries}
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.6in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+%\titlelabel{\thetitle.\quad}
+
+\usepackage{cite}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
 
 %\doublespacing
 
@@ -98,10 +135,12 @@ $M$ denotes a mirror that can be used to reflect the idler photon into detector 
 
 The quantum predictions for the outcomes of the experiment are familiar and rather simple: The probabilities for the outcomes $0$ and $1$ at detector $D_0$ both are $0.5$ as easily seen from state $\ket{\psi}$ in Equation \ref{state}. And the same holds for the case in which Bob measures in the diagonal basis at detector $D_{1,2}$. For this latter case, the state is rewritten as   
 
-\begin{equation}
+\begin{align}
 \label{eraser state}
-\ket{\psi}=\frac{1}{2}(\ket{0}\otimes(\ket{+}+\ket{-})+\ket{1}\otimes(\ket{+}-\ket{-})) =\frac{1}{2}((\ket{0}+\ket{1})\otimes\ket{+}+(\ket{0}-\ket{1})\otimes\ket{-}).
-\end{equation}
+\ket{\psi} &=\frac{1}{2}(\ket{0}\otimes(\ket{+}+\ket{-})+\ket{1}\otimes(\ket{+}-\ket{-})) \nonumber\\
+& =
+\frac{1}{2}((\ket{0}+\ket{1})\otimes\ket{+}+(\ket{0}-\ket{1})\otimes\ket{-}).
+\end{align}
 
 The statistics at $D_0$ are independent of which measurement is performed by Bob, as expected. Furthermore, by conditioning on Bob's outcomes we can make the following statements:
 
