--- a/1707.07884/Taming_the_Delayed_Choice_Quantum_Eraser.tex
+++ b/1707.07884/Taming_the_Delayed_Choice_Quantum_Eraser.tex
@@ -109,7 +109,7 @@ I discuss the delayed choice quantum eraser experiment (DCQE) by drawing an anal
 
 \section{Introduction}
 
-Delayed choice scenarios in slit experiments as found in \cite{wheeler1978past}, and earlier in \cite{von1941deutung} and \cite{bohr1996discussion}, have formed a rich area of theoretical and experimental research, as evidenced in the literature (\cite{eichmann1993young}, \cite{englert2000quantitative},  \cite{doi:10.1119/1.19257}, \cite{doi:10.1119/1.19258}, \cite{Kim1999}, \cite{walborn2002double}, \cite{kwiat2004science}, \cite{aharonov2005time},
+Delayed choice scenarios in slit experiments as found in \cite{wheeler1978past}, and earlier in \cite{von1941deutung} and \cite{bohr1996discussion}, have formed a rich area of theoretical and experimental research, as evidenced in the literature (\!\cite{eichmann1993young}, \cite{englert2000quantitative},  \cite{doi:10.1119/1.19257}, \cite{doi:10.1119/1.19258}, \cite{Kim1999}, \cite{walborn2002double}, \cite{kwiat2004science}, \cite{aharonov2005time},
 \cite{Peres2000}, \cite{Egg2013}, to name a few). 
 From the results of the original delayed choice experiment Wheeler concluded that  `no phenomenon is a phenomenon until it is an observed phenomenon', and `the past has
 no existence except as it is recorded in the present' (ibid.). Others have also been inclined to conclude that such experiments entail some kind of backwards in time influence or another (e.g. \cite{doi:10.1119/1.19258}). I shall discuss a modified version of Wheeler's delayed choice experiment, which was first proposed by  Scully\textit{ et al.} in \cite{scully1982quantum} and later realised in the experiments of Kim \textit{et al.} in \cite{Kim1999}. It is termed the Delayed Choice Quantum Eraser. I show that the actual evolution of the quantum state in the experiment and a novel analysis in terms of a Bell-type scenario prove Wheeler's conclusions and other conclusions about backwards in time influence  unwarranted. The puzzlement about delayed choice experiments emerges from misinterpreting and ignoring the symmetry of time-ordered measurement events.  Since the analysis is general, it applies to all cases of quantum eraser where two systems become entangled. For a 3-slit quantum eraser experiment see, for example, \cite{shah2017quantum}. 
@@ -134,7 +134,6 @@ The states of the photons are taken to be qubit states. Let us, for ease of comp
 $M$ denotes a mirror that can be used to reflect the idler photon into detector $D_{3,4}$. In Bob's arm two measurements can be performed: Either he chooses to use mirror $M$ to measure the idler photon in the computational basis $\{\ket{0},\ket{1}\}$ or the mirror is removed and the photon travels to detector $D_{1,2}$ where Bob performs a measurement in the diagonal basis  $\{\ket{+},\ket{-}\}$, where $\ket{+}=\frac{1}{\sqrt{2}}(\ket{0}+\ket{1})$ and $\ket{-}=\frac{1}{\sqrt{2}}(\ket{0}-\ket{1})$. 
 
 The quantum predictions for the outcomes of the experiment are familiar and rather simple: The probabilities for the outcomes $0$ and $1$ at detector $D_0$ both are $0.5$ as easily seen from state $\ket{\psi}$ in Equation \ref{state}. And the same holds for the case in which Bob measures in the diagonal basis at detector $D_{1,2}$. For this latter case, the state is rewritten as   
-
 \begin{align}
 \label{eraser state}
 \ket{\psi} &=\frac{1}{2}(\ket{0}\otimes(\ket{+}+\ket{-})+\ket{1}\otimes(\ket{+}-\ket{-})) \nonumber\\
@@ -155,7 +154,7 @@ The error in this naive argument for `action into the past' applied to the Bell-
 Two comments are in order. For one, the puzzle only has any grip since the outcome statistics of Alice measuring first and Bob after equals the outcome statistics of Bob measuring first and Alice measuring after. Obviously, the time order of which measurement happens first does not matter as is clear from the wavefunction of the system and is anyway enforced by the no-signalling theorem of quantum mechanics. %The probabilities are equal, by simply observing $P(\psi_i|\psi_f)=|\bra{\psi_i}\ket{\psi_f}|^2=P(\psi_f|\psi_i)$, for all initial and final states $\psi_i$, $\psi_f$ - a relation that holds in general. 
 This allows the post-selection to be done after the outcomes have occurred. Violation of this condition would indeed lead to a genuine paradox, and would in fact allow for signalling. Noticing this symmetry does not dispel the paradox but is the reason for why people can get confused about what is going on in the experiment. 
 
-For the other, assuming the signal photon to be in one of the basis states before it or the idler photon were measured puts one into the business of hidden variable theories (after all, non-locality has it that the actual state of Alice indeed changes when Bob performs his measurement; see Section \ref{Bohm}). For this introduces an ontological commitment as to the value definiteness of states prior to measurement. For example, both Egg and Ellerman correctly point out that if a detector can only detect one collapsed eigenstate this does not mean that the photon was already in that state prior to that measurement (\cite{Egg2013,ellerman2011very,Ellerman2015}). That's why one might want to avoid  phrases like `which-path information' as there isn't any information about which-path since no path was ever uniquely taken. 
+For the other, assuming the signal photon to be in one of the basis states before it or the idler photon were measured puts one into the business of hidden variable theories (after all, non-locality has it that the actual state of Alice indeed changes when Bob performs his measurement; see Section \ref{Bohm}). For this introduces an ontological commitment as to the value definiteness of states prior to measurement. For example, both Egg and Ellerman correctly point out that if a detector can only detect one collapsed eigenstate this does not mean that the photon was already in that state prior to that measurement (\!\cite{Egg2013,ellerman2011very,Ellerman2015}). That's why one might want to avoid  phrases like `which-path information' as there isn't any information about which-path since no path was ever uniquely taken. 
 Most importantly, one can tell a coherent story about the states in the experiment without resorting to `retrocausal action into the past'. In lights of this analysis the puzzle seems trivial.\footnote{It was drawn to my attention that a somewhat similar conclusion was very recently independently reached in \cite{kastner2019delayed}.} 
 
 In the double slit DCQE experiment (Section \ref{Scully}) the paradox is more disguised by the details of the experiment, but we will see that the same story can be told as in the Bell scenario. 
