--- a/1707.07884/Taming_the_Delayed_Choice_Quantum_Eraser.tex
+++ b/1707.07884/Taming_the_Delayed_Choice_Quantum_Eraser.tex
@@ -8,7 +8,7 @@
 \numberwithin{equation}{section}
 \usepackage{multicol}
 \usepackage{array}
-\bibliographystyle{apalike}
+\bibliographystyle{unsrt}
 \newcolumntype{C}[1]{>{\centering\arraybackslash}m{#1}}
 \usepackage{epstopdf}
 \DeclareGraphicsRule{.tif}{png}{.png}{`convert #1 `dirname #1`/`basename #1 .tif`.png}
@@ -109,8 +109,7 @@ I discuss the delayed choice quantum eraser experiment (DCQE) by drawing an anal
 
 \section{Introduction}
 
-Delayed choice scenarios in slit experiments as found in \cite{wheeler1978past}, and earlier in \cite{von1941deutung} and \cite{bohr1996discussion}, have formed a rich area of theoretical and experimental research, as evidenced in the literature (\!\cite{eichmann1993young}, \cite{englert2000quantitative},  \cite{doi:10.1119/1.19257}, \cite{doi:10.1119/1.19258}, \cite{Kim1999}, \cite{walborn2002double}, \cite{kwiat2004science}, \cite{aharonov2005time},
-\cite{Peres2000}, \cite{Egg2013}, to name a few). 
+Delayed choice scenarios in slit experiments as found in \cite{wheeler1978past}, and earlier in \cite{von1941deutung} and \cite{bohr1996discussion}, have formed a rich area of theoretical and experimental research, as evidenced in the literature (\!\cite{eichmann1993young, englert2000quantitative, doi:10.1119/1.19257, doi:10.1119/1.19258, Kim1999, walborn2002double, kwiat2004science, aharonov2005time, Peres2000, Egg2013}, to name a few). 
 From the results of the original delayed choice experiment Wheeler concluded that  `no phenomenon is a phenomenon until it is an observed phenomenon', and `the past has
 no existence except as it is recorded in the present' (ibid.). Others have also been inclined to conclude that such experiments entail some kind of backwards in time influence or another (e.g. \cite{doi:10.1119/1.19258}). I shall discuss a modified version of Wheeler's delayed choice experiment, which was first proposed by  Scully\textit{ et al.} in \cite{scully1982quantum} and later realised in the experiments of Kim \textit{et al.} in \cite{Kim1999}. It is termed the Delayed Choice Quantum Eraser. I show that the actual evolution of the quantum state in the experiment and a novel analysis in terms of a Bell-type scenario prove Wheeler's conclusions and other conclusions about backwards in time influence  unwarranted. The puzzlement about delayed choice experiments emerges from misinterpreting and ignoring the symmetry of time-ordered measurement events.  Since the analysis is general, it applies to all cases of quantum eraser where two systems become entangled. For a 3-slit quantum eraser experiment see, for example, \cite{shah2017quantum}. 
 
