--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,29 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-09 16:04:50 -0400 
+%% Created for Pete Su at 2023-08-09 21:26:02 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Kim2000,
+	author = {Yoon-Ho Kim and Rong Yu and Sergei P. Kulik and Yanhua Shih and Marlan O. Scully},
+	date-added = {2023-08-09 21:25:57 -0400},
+	date-modified = {2023-08-09 21:25:59 -0400},
+	doi = {10.1103/physrevlett.84.1},
+	journal = {Phys. Rev. Lett.},
+	note = {\href{http://arxiv.org/abs/quant-ph/9903047v1}{arxiv:quant-ph/9903047v1}},
+	number = {1},
+	pages = {1--5},
+	publisher = {American Physical Society ({APS})},
+	title = {Delayed {\textquotedblleft}Choice{\textquotedblright} Quantum Eraser},
+	url = {https://doi.org/10.1103%2Fphysrevlett.84.1},
+	volume = {84},
+	year = 2000,
+	bdsk-url-1 = {https://doi.org/10.1103%2Fphysrevlett.84.1},
+	bdsk-url-2 = {https://doi.org/10.1103/physrevlett.84.1}}
 
 @book{Grynberg2010,
 	author = {Grynberg, Gilbert and Aspect, Alain and Fabre, Claude},
