--- a/quant-ph-9903047v1/eraser2.tex
+++ b/quant-ph-9903047v1/eraser2.tex
@@ -1,4 +1,51 @@
-\documentstyle[pra,aps,twocolumn,epsf]{revtex}
+\documentclass[pra,aps,epsf,12pt]{revtex4-2}
+
+\usepackage{epsfig}
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.6in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+%\titlelabel{\thetitle.\quad}
+
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
 
 \begin{document}
 \draft
@@ -11,9 +58,6 @@ Baltimore, MD 21250}
 \address{Department of Physics, Texas A \& M University, College Station, TX 77842\\
 and Max-Planck Institut f\"{u}r Quantenoptik, M\"{u}nchen, Germany\\(submitted to PRL)}
 
-\maketitle
-
-\widetext
 
 \begin{abstract}
 This paper reports a ``delayed choice quantum eraser" experiment proposed by Scully and
@@ -25,7 +69,9 @@ or marked by its entangled twin even after the registration of the quantum.
 
 \pacs{PACS Number: 03.65.Bz, 42.50.Dv}
 
-\narrowtext
+\maketitle
+
+\newpage
 
 Complementarity, perhaps the most basic principle of quantum mechanics, distinguishes the
 world of quantum phenomena from the realm of classical physics. Quantum mechanically, one
@@ -48,8 +94,7 @@ interference pattern. However, it has been proven \cite {Scully} that under cert
 circumstances this common interpretation may not be true. In 1982, Scully and Dr\"{u}hl
 found a way around this position-momentum uncertainty obstacle and proposed a quantum
 eraser to obtain which-path or particle-like information without scattering or
-\newpage \vspace*{30mm}
-\noindent otherwise introducing large uncontrolled phase factors to disturb the
+otherwise introducing large uncontrolled phase factors to disturb the
 interference. To be sure the interference pattern disappears when which-path information
 is obtained. But it reappears when we erase (quantum erasure) the which-path information
 \cite{Scully,Wheeler}. Since 1982, quantum eraser behavior has been reported in several
@@ -131,7 +176,7 @@ than what one has learned from the registration of photon 1. Compared to the $%
 1ns$ response time of the detectors, $2.5m$ delay is good enough
 for a ``delayed erasure''.
 
-Figs.\ref{fig:figure3}, \ref{fig:figure4}, and \ref{fig:figure5} report the experimental
+Figs.~\ref{fig:figure3}, \ref{fig:figure4}, and \ref{fig:figure5} report the experimental
 results, which are all consistent with prediction. Figs.\ref{fig:figure3} and
 \ref{fig:figure4} show the ``joint detection'' rates $R_{01}$ and $R_{02}$ against the
 $x$ coordinates of detector $D_{0}$. It is clear we have observed the standard Young's
@@ -320,6 +365,8 @@ Univ. Press, Cambridge, UK (1997).
 \bibitem{function}  M.H. Rubin, D.N. Klyshko, and Y.H. Shih, Phys. Rev. A {\bf 50}, 5122 (1994).
 
 \end{references}
+
+\newpage
 
 \begin{figure}[tbp]
 \centerline{\epsfxsize=2.7in \epsffile{figure1.eps}} \caption{A proposed quantum eraser
