--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,28 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-09 21:45:10 -0400 
+%% Created for Pete Su at 2023-08-10 06:49:34 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Kastner2019,
+	author = {R. E. Kastner},
+	date-added = {2023-08-10 06:49:28 -0400},
+	date-modified = {2023-08-10 06:49:31 -0400},
+	doi = {10.1007/s10701-019-00278-8},
+	journal = {Found Phys},
+	number = {7},
+	pages = {717--727},
+	publisher = {Springer Science and Business Media {LLC}},
+	title = {The `Delayed Choice Quantum Eraser' Neither Erases Nor Delays},
+	url = {https://doi.org/10.1007%2Fs10701-019-00278-8},
+	volume = {49},
+	year = 2019,
+	bdsk-url-1 = {https://doi.org/10.1007%2Fs10701-019-00278-8},
+	bdsk-url-2 = {https://doi.org/10.1007/s10701-019-00278-8}}
 
 @article{Dicke1981,
 	author = {R. H. Dicke},
