--- a/gr-qc-0010055/bh-evaporation-notes.tex
+++ b/gr-qc-0010055/bh-evaporation-notes.tex
@@ -27,14 +27,14 @@ bookmarksopenlevel=10
 }
 \usepackage[noBBpl,sc]{mathpazo}
 \linespread{1.1}
-\usepackage[papersize={7in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\usepackage[papersize={7in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
 \tolerance=2000
 \hbadness=2000
 \usepackage[small]{titlesec}
 \usepackage[dotinlabels]{titletoc}
 \titlelabel{{\thetitle}.\quad}
 
-\input{../helpers/mnsymbol.tex}
+\input{../helpers/cmrsum}
 \input{../helpers/fix-underbrace.tex}
 %\input{../helpers/revtex-12-fix.tex}
 %\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
