--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,36 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-10 07:08:10 -0400 
+%% Created for Pete Su at 2023-08-10 09:07:44 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Hartman2020,
+	author = {Thomas Hartman and Edgar Shaghoulian and Andrew Strominger},
+	date-added = {2023-08-10 09:07:40 -0400},
+	date-modified = {2023-08-10 09:07:42 -0400},
+	doi = {10.1007/jhep07(2020)022},
+	journal = {J. High Energ. Phys.},
+	note = {\href{http://arxiv.org/abs/2004.13857v1}{arxiv:2004.13857v1}},
+	number = {7},
+	publisher = {Springer Science and Business Media {LLC}},
+	title = {Islands in asymptotically flat 2D gravity},
+	url = {https://doi.org/10.1007%2Fjhep07%282020%29022},
+	volume = {2020},
+	year = 2020,
+	bdsk-url-1 = {https://doi.org/10.1007%2Fjhep07%282020%29022},
+	bdsk-url-2 = {https://doi.org/10.1007/jhep07(2020)022}}
+
+@misc{Hartman2015,
+	author = {Thomas Hartman},
+	date-added = {2023-08-10 09:05:33 -0400},
+	date-modified = {2023-08-10 09:07:05 -0400},
+	howpublished = {Online Notes},
+	note = {\href{http://www.hartmanhep.net/topics2015/gravity-lectures.pdf}{PDF}, \href{http://www.hartmanhep.net/topics2015/}{Course website}},
+	title = {Lectures on Quantum Gravity and Black Holes}}
 
 @article{Kastner2019,
 	author = {R. E. Kastner},
