--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,40 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-10 09:07:44 -0400 
+%% Created for Pete Su at 2023-08-10 09:10:46 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Hawking1974,
+	author = {Hawking, Stephen W},
+	date-added = {2023-08-10 09:10:41 -0400},
+	date-modified = {2023-08-10 09:10:42 -0400},
+	journal = {Nature},
+	number = {5443},
+	pages = {30--31},
+	publisher = {Nature Publishing Group UK London},
+	title = {Black hole explosions?},
+	volume = {248},
+	year = {1974}}
+
+@article{Hawking1976,
+	author = {S. W. Hawking},
+	date-added = {2023-08-10 09:09:59 -0400},
+	date-modified = {2023-08-10 09:10:00 -0400},
+	doi = {10.1103/physrevd.14.2460},
+	journal = {Phys. Rev. D},
+	number = {10},
+	pages = {2460--2473},
+	publisher = {American Physical Society ({APS})},
+	title = {Breakdown of predictability in gravitational collapse},
+	url = {https://doi.org/10.1103%2Fphysrevd.14.2460},
+	volume = {14},
+	year = 1976,
+	bdsk-url-1 = {https://doi.org/10.1103%2Fphysrevd.14.2460},
+	bdsk-url-2 = {https://doi.org/10.1103/physrevd.14.2460}}
 
 @article{Hartman2020,
 	author = {Thomas Hartman and Edgar Shaghoulian and Andrew Strominger},
@@ -8076,7 +8104,7 @@
 	year = {2016},
 	bdsk-url-1 = {https://doi.org/10.1016/j.physletb.2015.12.076}}
 
-@article{Hawking_2001,
+@article{Hawking2001,
 	abstract = {A de Sitter brane-world bounding regions of anti-de Sitter
 space has a macroscopic entropy given by one-quarter the area of
 the observer horizon. A proposed variant of the AdS/CFT
@@ -8088,7 +8116,7 @@ as quantum entanglement of the conformal field theory across the
 horizon.},
 	author = {Stephen Hawking and Juan Maldacena and Andrew Strominger},
 	date-added = {2019-03-03 12:01:37 -0500},
-	date-modified = {2019-03-03 12:02:11 -0500},
+	date-modified = {2023-08-10 09:09:45 -0400},
 	doi = {10.1088/1126-6708/2001/05/001},
 	journal = {Journal of High Energy Physics},
 	note = {\href{https://arxiv.org/abs/hep-th/0002145}{https://arxiv.org/abs/hep-th/0002145}},
