--- a/bib.bib
+++ b/bib.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-10 20:36:29 -0400 
+%% Created for Pete Su at 2023-08-10 20:37:36 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -6093,11 +6093,11 @@
 	year = {2000},
 	bdsk-url-1 = {https://doi.org/10.1016/S0370-1573(99)00083-6}}
 
-@article{Page:2013dx,
+@article{Page2013,
 	archiveprefix = {arXiv},
 	author = {Page, Don N.},
 	date-added = {2019-11-21 21:35:07 -0500},
-	date-modified = {2019-11-21 21:35:34 -0500},
+	date-modified = {2023-08-10 20:37:34 -0400},
 	doi = {10.1088/1475-7516/2013/09/028},
 	eprint = {1301.4995},
 	journal = {JCAP},
