--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,21 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-10 20:37:36 -0400 
+%% Created for Pete Su at 2023-08-10 20:47:31 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@misc{Hefler2005,
+	author = {Adam D. Helfer},
+	date-added = {2023-08-10 20:46:32 -0400},
+	date-modified = {2023-08-10 20:47:31 -0400},
+	howpublished = {Online Notes},
+	note = {\href{https://arxiv.org/abs/gr-qc/0503053}{arxiv:gr-qc/0503053}},
+	title = {Quantum character of black holes},
+	year = {2005}}
 
 @article{Helfer2003,
 	author = {Adam D Helfer},
