--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,28 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-10 21:12:24 -0400 
+%% Created for Pete Su at 2023-08-10 22:22:56 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Hod2015,
+	author = {Shahar Hod},
+	date-added = {2023-08-10 22:22:16 -0400},
+	date-modified = {2023-08-10 22:22:56 -0400},
+	doi = {10.1016/j.physletb.2015.10.052},
+	journal = {Physics Letters B},
+	note = {\href{https://arxiv.org/abs/1511.03665}{arxiv:1511.03665}},
+	pages = {241--245},
+	publisher = {Elsevier {BV}},
+	title = {Bekenstein's generalized second law of thermodynamics: The role of the hoop conjecture},
+	url = {https://doi.org/10.1016%2Fj.physletb.2015.10.052},
+	volume = {751},
+	year = 2015,
+	bdsk-url-1 = {https://doi.org/10.1016%2Fj.physletb.2015.10.052},
+	bdsk-url-2 = {https://doi.org/10.1016/j.physletb.2015.10.052}}
 
 @article{Higuchi2017,
 	author = {Atsushi Higuchi and Satoshi Iso and Kazushige Ueda and Kazuhiro Yamamoto},
