--- a/1511.03665/1511.03665.tex
+++ b/1511.03665/1511.03665.tex
@@ -23,12 +23,13 @@ bookmarksopenlevel=10
 }
 \usepackage[noBBpl,sc]{mathpazo}
 \linespread{1.05}
-\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
-\tolerance=2000
-\hbadness=2000
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
 
 % these include amsmath and that can cause trouble in older docs.
-\input{../helpers/mnsymbol.tex}
+\input{../helpers/cmrsum}
 \input{../helpers/fix-underbrace.tex}
 
 %\usepackage[dotinlabels]{titletoc}
