--- a/1401.2026/wald.tex
+++ b/1401.2026/wald.tex
@@ -23,18 +23,16 @@ bookmarksopenlevel=10
 %\usepackage{amsmath,amsthm,amscd,amssymb}
 \usepackage{amsmath,amssymb,amstext,amsthm,amscd}
 \usepackage{mathrsfs,eucal,bm,slashed}
-\usepackage[noBBpl,sc,osf]{mathpazo}
+\usepackage[noBBpl,sc]{mathpazo}
 \linespread{1.1}
 %\usepackage[letterpaper, margin=1.2in]{geometry}
-\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
-\tolerance=2000
-\hbadness=2000
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.7in, bottom=.9in]{geometry}
 \usepackage[small]{titlesec}
 \usepackage[dotinlabels]{titletoc}
 \titlelabel{{\thetitle}.\quad}
 
 % different \sum and also fixes underbraces
-\input{../helpers/mnsymbol.tex}
+\input{../helpers/cmrsum}
 
 % optional
 
@@ -334,6 +332,9 @@ We review the theory of quantum fields propagating in an arbitrary, classical, g
 %\maketitle
 
 %%%%%%%%%%%
+
+\newpage
+
 \section{The nature of Quantum Field Theory in Curved Spacetime}
 
 Quantum field theory in curved spacetime (QFTCS) is the theory of quantum fields propagating in a background,
