--- a/1401.2026/wald.tex
+++ b/1401.2026/wald.tex
@@ -345,7 +345,7 @@ It should be possible to derive QFTCS by taking a suitable limit of a more funda
 The fundamental ideas upon which classical general relativity is based are that (i) all aspects of spacetime structure are described by the  topological and differential (i.e., manifold) properties of events together with a Lorentz signature metric $g$, and (ii) the metric and matter fields\footnote{One of the truly remarkable aspects of general relativity is that no new ``matter field'' need be introduced to describe gravitation, i.e., all physical phenomena normally attributed to ``gravity'' are, in fact, described by $g$.} are dynamical; furthermore their evolution is locally determined. More precisely, the metric and the tensor (and/or spinor) fields describing matter satisfy partial differential equations---namely, Einstein's equation together with the equations of motion for the matter fields---that have a well posed initial value formulation, so that these fields are uniquely determined (up to ``gauge'') from their initial data within a suitable domain of dependence. In particular, in classical general relativity, there is no non-dynamical, ``background structure'' in the laws of physics apart from the manifold structure of events. This lack of background structure in classical general relativity is usually referred to as the ``covariance'' or ``coordinate invariance'' of the theory; a ``preferred set of coordinates'' defined independently of the metric would provide non-dynamical, background structure.
 
 It is much more difficult to identify the fundamental ideas upon which quantum field theory in Minkowski spacetime is based. One can attempt to formulate the quantum theory of a field in Minkowski spacetime by decomposing the field into modes and applying the rules of quantum mechanics to each mode. For a free field, each mode is an independent harmonic oscillator and one can obtain a mathematically sensible quantum field theory in this manner, although even here one encounters infinite expressions for quantities that are nonlinear in the fields. A well known example of this general phenomenon is that one obtains an infinite expression for the total energy (and energy density) of the field, as can be seen by adding the zero-point energies and/or energy densities of the infinite number of modes. The situation is considerably worse for interacting (i.e., nonlinear) fields, wherein one immediately encounters ill defined and/or infinite expressions in the calculation of essentially all physical quantities, arising from the fact that modes of arbitrarily high energies seemingly contribute to low energy processes. Historically, it it appears to have been generally assumed in its earliest days that the quantum field theory description of nature would break down at, say, the energy scale of elementary particles, and there was no reason to presume that it was a mathematically consistent theory. However, starting from the early 1950s, it was gradually understood how to give mathematically consistent rules to produce well defined expressions for physical quantities to all orders in perturbation theory for renormalizable theories such as quantum electrodynamics. This process culminated in the works of Bogliubov, Parasiuk
-and of Hepp and Zimmermann, with important practical improvements (dimensional regularization) being given later by `t~Hooft and Veltmann. It was also seen that the predictions of quantum field theory give truly excellent agreement with experiment---as they have continued to do through the present, LHC era. In the 1950s and 1960s, major progress was made toward putting quantum field on a mathematically sound footing via the development of the axiomatic~\cite{sw}, algebraic~\cite{haag}, and constructive~\cite{glimm} approaches. Nevertheless, the prevailing attitude toward quantum field theory today is not very different from what it was in its earliest days, namely, that it is not a fundamental theory but merely a valid description of quantum field modes up to some cutoff in energy (now assumed to be at a much higher energy scale than would have been assumed in its earliest days). At the present time, relatively little attention is generally paid to the issue of whether quantum field theory can be given a mathematically precise and consistent formulation---as compared with such issues as the ``fine tuning'' that would be necessary to give small values to the cosmological constant and Higgs mass if one views quantum field theory as the quantum theory of the modes of fields lying below some energy cutoff.
+and of Hepp and Zimmermann, with important practical improvements (dimensional regularization) being given later by `t~Hooft and Veltmann. It was also seen that the predictions of quantum field theory give truly excellent agreement with experiment---as they have continued to do through the present, LHC era. In the 1950s and 1960s, major progress was made toward putting quantum field theory on a mathematically sound footing via the development of the axiomatic~\cite{sw}, algebraic~\cite{haag}, and constructive~\cite{glimm} approaches. Nevertheless, the prevailing attitude toward quantum field theory today is not very different from what it was in its earliest days, namely, that it is not a fundamental theory but merely a valid description of quantum field modes up to some cutoff in energy (now assumed to be at a much higher energy scale than would have been assumed in its earliest days). At the present time, relatively little attention is generally paid to the issue of whether quantum field theory can be given a mathematically precise and consistent formulation---as compared with such issues as the ``fine tuning'' that would be necessary to give small values to the cosmological constant and Higgs mass if one views quantum field theory as the quantum theory of the modes of fields lying below some energy cutoff.
 
 Our view is that it is very important to determine if quantum field theory can be given a mathematically precise and consistent formulation as a theory in its own right---and to provide such a formulation if it can be given. This is not because we believe that quantum field theory should be a ``final'' theory of nature; indeed, we do not believe that a quantum theory of the spacetime metric can be formulated within the existing framework of quantum field theory. However, even if quantum field theory has only a limited domain of validity, it is important to understand precisely what questions are well posed within its framework and how the answers to these questions are to be obtained. In this way, the predictions of quantum field theory can be made with clarity and precision, and hints may be provided for some of the features that might be expected to survive in a more fundamental theory that supersedes quantum field theory.
 
