--- a/bib.bib
+++ b/bib.bib
@@ -1,17 +1,107 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-10 22:58:33 -0400 
+%% Created for Pete Su at 2023-08-11 07:49:38 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
-@article{Hollands2015a,
+@article{Hotta2015,
+	author = {M. Hotta and R. Sch{\"u}tzhold and W.{\hspace{0.167em}}G. Unruh},
+	date-added = {2023-08-11 07:47:38 -0400},
+	date-modified = {2023-08-11 07:49:38 -0400},
+	doi = {10.1103/physrevd.91.124060},
+	journal = {Phys. Rev. D},
+	note = {\href{https://arxiv.org/abs/1503.06109}{arxiv:1503.06109}},
+	number = {12},
+	publisher = {American Physical Society ({APS})},
+	title = {Partner particles for moving mirror radiation and black hole evaporation},
+	url = {https://doi.org/10.1103%2Fphysrevd.91.124060},
+	volume = {91},
+	year = 2015,
+	bdsk-url-1 = {https://doi.org/10.1103%2Fphysrevd.91.124060},
+	bdsk-url-2 = {https://doi.org/10.1103/physrevd.91.124060}}
+
+@article{Hossenfelder2010,
+	author = {S. Hossenfelder and L. Smolin},
+	date-added = {2023-08-11 07:45:56 -0400},
+	date-modified = {2023-08-11 07:46:15 -0400},
+	doi = {10.1103/physrevd.81.064009},
+	journal = {Phys. Rev. D},
+	note = {\href{http://arxiv.org/abs/0901.3156v1}{arxiv:0901.3156v1}},
+	number = {6},
+	publisher = {American Physical Society ({APS})},
+	title = {Conservative solutions to the black hole information problem},
+	url = {https://doi.org/10.1103%2Fphysrevd.81.064009},
+	volume = {81},
+	year = 2010,
+	bdsk-url-1 = {https://doi.org/10.1103%2Fphysrevd.81.064009},
+	bdsk-url-2 = {https://doi.org/10.1103/physrevd.81.064009}}
+
+@article{Hossenfelder2015,
+	author = {Sabine Hossenfelder},
+	date-added = {2023-08-11 07:45:30 -0400},
+	date-modified = {2023-08-11 07:45:31 -0400},
+	doi = {10.1103/physrevd.91.044015},
+	journal = {Phys. Rev. D},
+	note = {\href{http://arxiv.org/abs/1401.0288v1}{arxiv:1401.0288v1}},
+	number = {4},
+	publisher = {American Physical Society ({APS})},
+	title = {Disentangling the black hole vacuum},
+	url = {https://doi.org/10.1103%2Fphysrevd.91.044015},
+	volume = {91},
+	year = 2015,
+	bdsk-url-1 = {https://doi.org/10.1103%2Fphysrevd.91.044015},
+	bdsk-url-2 = {https://doi.org/10.1103/physrevd.91.044015}}
+
+@article{Hossenfelder2012,
+	author = {Hossenfelder, Sabine},
+	date-added = {2023-08-11 07:44:39 -0400},
+	date-modified = {2023-08-11 07:45:03 -0400},
+	journal = {arXiv preprint },
+	note = {\href{https://arxiv.org/abs/1210.5317}{arxiv:1210.5317}},
+	title = {Comment on the black hole firewall},
+	year = {2012}}
+
+@article{Holzhey1994,
+	author = {Christoph Holzhey and Finn Larsen and Frank Wilczek},
+	date-added = {2023-08-11 07:43:40 -0400},
+	date-modified = {2023-08-11 07:43:42 -0400},
+	doi = {10.1016/0550-3213(94)90402-2},
+	journal = {Nuclear Physics B},
+	note = {\href{http://arxiv.org/abs/hep-th/9403108v1}{arxiv:hep-th/9403108v1}},
+	number = {3},
+	pages = {443--467},
+	publisher = {Elsevier {BV}},
+	title = {Geometric and renormalized entropy in conformal field theory},
+	url = {https://doi.org/10.1016%2F0550-3213%2894%2990402-2},
+	volume = {424},
+	year = 1994,
+	bdsk-url-1 = {https://doi.org/10.1016%2F0550-3213%2894%2990402-2},
+	bdsk-url-2 = {https://doi.org/10.1016/0550-3213(94)90402-2}}
+
+@article{Hollands2009,
+	author = {Stefan Hollands and Robert M. Wald},
+	date-added = {2023-08-11 07:42:27 -0400},
+	date-modified = {2023-08-11 07:42:30 -0400},
+	doi = {10.1007/s00220-009-0880-7},
+	journal = {Commun. Math. Phys.},
+	number = {1},
+	pages = {85--125},
+	publisher = {Springer Science and Business Media {LLC}},
+	title = {Axiomatic Quantum Field Theory in Curved Spacetime},
+	url = {https://doi.org/10.1007%2Fs00220-009-0880-7},
+	volume = {293},
+	year = 2009,
+	bdsk-url-1 = {https://doi.org/10.1007%2Fs00220-009-0880-7},
+	bdsk-url-2 = {https://doi.org/10.1007/s00220-009-0880-7}}
+
+@article{Hollands2015,
 	author = {Stefan Hollands and Robert M. Wald},
 	date-added = {2023-08-10 22:58:16 -0400},
-	date-modified = {2023-08-10 22:58:21 -0400},
+	date-modified = {2023-08-11 07:42:15 -0400},
 	doi = {10.1016/j.physrep.2015.02.001},
 	journal = {Physics Reports},
 	note = {\href{http://arxiv.org/abs/1401.2026v2}{arxiv:1401.2026v2}},
@@ -7891,23 +7981,6 @@
 	title = {{Collider phenomenology: Basic knowledge and techniques}},
 	year = {2005},
 	bdsk-url-1 = {https://doi.org/10.1142/9789812773579_0008}}
-
-@article{Hossenfelder2010,
-	archiveprefix = {arXiv},
-	author = {Hossenfelder, Sabine and Smolin, Lee},
-	date-added = {2019-03-10 08:48:05 -0400},
-	date-modified = {2023-08-10 21:12:18 -0400},
-	doi = {10.1103/PhysRevD.81.064009},
-	eprint = {0901.3156},
-	journal = {Phys. Rev.},
-	note = {\href{https://arxiv.org/abs/0901.3156}{https://arxiv.org/abs/0901.3156}},
-	pages = {064009},
-	primaryclass = {gr-qc},
-	slaccitation = {%%CITATION = ARXIV:0901.3156;%%},
-	title = {{Conservative solutions to the black hole information problem}},
-	volume = {D81},
-	year = {2010},
-	bdsk-url-1 = {https://doi.org/10.1103/PhysRevD.81.064009}}
 
 @incollection{Valentini2010,
 	author = {Antony Valentini},
