--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,75 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-11 07:49:38 -0400 
+%% Created for Pete Su at 2023-08-11 08:04:50 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Iorio2004,
+	author = {A. Iorio and G. Lambiase and G. Vitiello},
+	date-added = {2023-08-11 08:04:40 -0400},
+	date-modified = {2023-08-11 08:04:42 -0400},
+	doi = {10.1016/j.aop.2003.08.006},
+	journal = {Annals of Physics},
+	note = {\href{http://arxiv.org/abs/hep-th/0204034v2}{arxiv:hep-th/0204034v2}},
+	number = {1},
+	pages = {151--165},
+	publisher = {Elsevier {BV}},
+	title = {Entangled quantum fields near the event horizon and entropy},
+	url = {https://doi.org/10.1016%2Fj.aop.2003.08.006},
+	volume = {309},
+	year = 2004,
+	bdsk-url-1 = {https://doi.org/10.1016%2Fj.aop.2003.08.006},
+	bdsk-url-2 = {https://doi.org/10.1016/j.aop.2003.08.006}}
+
+@article{Hawking2014,
+	archiveprefix = {arXiv},
+	author = {Hawking, S. W.},
+	date-added = {2023-08-11 08:02:41 -0400},
+	date-modified = {2023-08-11 08:03:19 -0400},
+	eprint = {1401.5761},
+	journal = {arXiv Preprint},
+	note = {\href{https://arxiv.org/abs/1401.5761}{arxiv:1401.5761}},
+	primaryclass = {hep-th},
+	title = {{Information Preservation and Weather Forecasting for Black Holes}},
+	year = {2014}}
+
+@article{Hubeny2007,
+	author = {Veronika E Hubeny and Mukund Rangamani and Tadashi Takayanagi},
+	date-added = {2023-08-11 08:01:23 -0400},
+	date-modified = {2023-08-11 08:01:26 -0400},
+	doi = {10.1088/1126-6708/2007/07/062},
+	journal = {J. High Energy Phys.},
+	note = {\href{http://arxiv.org/abs/0705.0016v3}{arxiv:0705.0016v3}},
+	number = {07},
+	pages = {062--062},
+	publisher = {Springer Science and Business Media {LLC}},
+	title = {A covariant holographic entanglement entropy proposal},
+	url = {https://doi.org/10.1088%2F1126-6708%2F2007%2F07%2F062},
+	volume = {2007},
+	year = 2007,
+	bdsk-url-1 = {https://doi.org/10.1088%2F1126-6708%2F2007%2F07%2F062},
+	bdsk-url-2 = {https://doi.org/10.1088/1126-6708/2007/07/062}}
+
+@article{Hubeny2015,
+	author = {Veronika E Hubeny},
+	date-added = {2023-08-11 07:55:27 -0400},
+	date-modified = {2023-08-11 07:55:29 -0400},
+	doi = {10.1088/0264-9381/32/12/124010},
+	journal = {Class. Quantum Grav.},
+	note = {\href{http://arxiv.org/abs/1501.00007v2}{arxiv:1501.00007v2}},
+	number = {12},
+	pages = {124010},
+	publisher = {{IOP} Publishing},
+	title = {The {AdS}/{CFT} correspondence},
+	url = {https://doi.org/10.1088%2F0264-9381%2F32%2F12%2F124010},
+	volume = {32},
+	year = 2015,
+	bdsk-url-1 = {https://doi.org/10.1088%2F0264-9381%2F32%2F12%2F124010},
+	bdsk-url-2 = {https://doi.org/10.1088/0264-9381/32/12/124010}}
 
 @article{Hotta2015,
 	author = {M. Hotta and R. Sch{\"u}tzhold and W.{\hspace{0.167em}}G. Unruh},
@@ -6160,24 +6223,6 @@
 	volume = {385},
 	year = {2003},
 	bdsk-url-1 = {https://doi.org/10.1016/S0370-1573(03)00263-1}}
-
-@article{Hubeny2015,
-	archiveprefix = {arXiv},
-	author = {Hubeny, Veronika E.},
-	date-added = {2019-11-24 10:47:51 -0500},
-	date-modified = {2023-08-08 07:31:20 -0400},
-	doi = {10.1088/0264-9381/32/12/124010},
-	eprint = {1501.00007},
-	journal = {Class. Quant. Grav.},
-	note = {\href{https://arxiv.org/abs/1501.00007}{arxiv:1501.00007}},
-	number = {12},
-	pages = {124010},
-	primaryclass = {gr-qc},
-	slaccitation = {%%CITATION = ARXIV:1501.00007;%%},
-	title = {{The AdS/CFT Correspondence}},
-	volume = {32},
-	year = {2015},
-	bdsk-url-1 = {https://doi.org/10.1088/0264-9381/32/12/124010}}
 
 @inproceedings{Polchinski2010,
 	archiveprefix = {arXiv},
