--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,35 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-11 08:04:50 -0400 
+%% Created for Pete Su at 2023-08-11 08:12:43 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Jackiw1985,
+	author = {Jackiw, Roman},
+	date-added = {2023-08-11 08:12:34 -0400},
+	date-modified = {2023-08-11 08:12:38 -0400},
+	journal = {Nuclear Physics B},
+	pages = {343--356},
+	publisher = {Elsevier},
+	title = {Lower dimensional gravity},
+	volume = {252},
+	year = {1985}}
+
+@article{Isham1977,
+	author = {Isham, CJ},
+	date-added = {2023-08-11 08:11:29 -0400},
+	date-modified = {2023-08-11 08:11:32 -0400},
+	journal = {Annals of the New York Academy of Sciences},
+	number = {1},
+	pages = {114--157},
+	publisher = {Wiley Online Library},
+	title = {Quantum field theory in curved spacetime: an overview},
+	volume = {302},
+	year = {1977}}
 
 @article{Iorio2004,
 	author = {A. Iorio and G. Lambiase and G. Vitiello},
