--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,29 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-11 08:12:43 -0400 
+%% Created for Pete Su at 2023-08-11 08:20:24 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Jacobson1993,
+	author = {Ted Jacobson},
+	date-added = {2023-08-11 08:20:15 -0400},
+	date-modified = {2023-08-11 08:20:18 -0400},
+	doi = {10.1103/physrevd.48.728},
+	journal = {Phys. Rev. D},
+	note = {\href{http://arxiv.org/abs/hep-th/9303103v1}{arxiv:hep-th/9303103v1}},
+	number = {2},
+	pages = {728--741},
+	publisher = {American Physical Society ({APS})},
+	title = {Black hole radiation in the presence of a short distance cutoff},
+	url = {https://doi.org/10.1103%2Fphysrevd.48.728},
+	volume = {48},
+	year = 1993,
+	bdsk-url-1 = {https://doi.org/10.1103%2Fphysrevd.48.728},
+	bdsk-url-2 = {https://doi.org/10.1103/physrevd.48.728}}
 
 @article{Jackiw1985,
 	author = {Jackiw, Roman},
@@ -146,7 +163,7 @@
 	author = {Hossenfelder, Sabine},
 	date-added = {2023-08-11 07:44:39 -0400},
 	date-modified = {2023-08-11 07:45:03 -0400},
-	journal = {arXiv preprint },
+	journal = {arXiv preprint},
 	note = {\href{https://arxiv.org/abs/1210.5317}{arxiv:1210.5317}},
 	title = {Comment on the black hole firewall},
 	year = {2012}}
