--- a/hep-th-9303103v1/hep-th-9303103v1.tex
+++ b/hep-th-9303103v1/hep-th-9303103v1.tex
@@ -9,7 +9,54 @@
 
 %%% process with Latex
 
-\documentstyle[12pt]{article}
+\documentclass[12pt]{article}
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+%\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.6in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+%\titlelabel{\thetitle.\quad}
+
+\usepackage{cite}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
+
 %\advance\textwidth 1in
 %\advance\oddsidemargin -0.5in
 
@@ -32,9 +79,9 @@
 \def\cmin{C_{\rm min}}
 
 \begin{document}
-\title{Black Hole Radiation in the Presence of \\a Short Distance
+\title{\Large Black Hole Radiation in the Presence of \\a Short Distance
 Cutoff}%\thanks{UMDGR93-32, NSF-ITP-93-26, hep-th/9303103}
-\author{Ted Jacobson\thanks{jacobson@umdhep.umd.edu}\\
+\author{\large Ted Jacobson\thanks{jacobson@umdhep.umd.edu}\\
 Department of Physics, University of Maryland\\
 College Park, Maryland 20742\\
 and\\
