--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,26 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-11 11:59:51 -0400 
+%% Created for Pete Su at 2023-08-11 19:44:38 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Jacobson2013a,
+	author = {Jacobson, Ted},
+	date-added = {2023-08-11 19:43:43 -0400},
+	date-modified = {2023-08-11 19:44:27 -0400},
+	doi = {10.1142/s0218271813420029},
+	journal = {International Journal of Modern Physics D},
+	note = {\href{http://arxiv.org/abs/1212.6944v3}{arxiv:1212.6944v3}},
+	number = {12},
+	pages = {1342002},
+	publisher = {World Scientific},
+	title = {Boundary unitarity and the black hole information paradox},
+	volume = {22},
+	year = {2013}}
 
 @incollection{Jacobson2013,
 	author = {Jacobson, Ted},
