--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,45 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-11 19:44:38 -0400 
+%% Created for Pete Su at 2023-08-11 19:54:53 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Jacobson2012,
+	author = {Ted Jacobson},
+	date-added = {2023-08-11 19:53:59 -0400},
+	date-modified = {2023-08-11 19:54:50 -0400},
+	doi = {10.1142/s0218271812420060},
+	journal = {Int. J. Mod. Phys. D},
+	note = {\href{http://arxiv.org/abs/1204.6349v1}{arxiv:1204.6349v1}},
+	number = {11},
+	pages = {1242006},
+	publisher = {World Scientific Pub Co Pte Lt},
+	title = {Gravitation and vacuum entanglement entropy},
+	url = {https://doi.org/10.1142%2Fs0218271812420060},
+	volume = {21},
+	year = 2012,
+	bdsk-url-1 = {https://doi.org/10.1142%2Fs0218271812420060},
+	bdsk-url-2 = {https://doi.org/10.1142/s0218271812420060}}
+
+@article{Jacobson2016,
+	author = {Ted Jacobson},
+	date-added = {2023-08-11 19:53:31 -0400},
+	date-modified = {2023-08-11 19:53:33 -0400},
+	doi = {10.1103/physrevlett.116.201101},
+	journal = {Phys. Rev. Lett.},
+	note = {\href{http://arxiv.org/abs/1505.04753v4}{arxiv:1505.04753v4}},
+	number = {20},
+	publisher = {American Physical Society ({APS})},
+	title = {Entanglement Equilibrium and the Einstein Equation},
+	url = {https://doi.org/10.1103%2Fphysrevlett.116.201101},
+	volume = {116},
+	year = 2016,
+	bdsk-url-1 = {https://doi.org/10.1103%2Fphysrevlett.116.201101},
+	bdsk-url-2 = {https://doi.org/10.1103/physrevlett.116.201101}}
 
 @article{Jacobson2013a,
 	author = {Jacobson, Ted},
