--- a/gr-qc-0308048/valdivia0409.tex
+++ b/gr-qc-0308048/valdivia0409.tex
@@ -21,7 +21,7 @@ bookmarksopenlevel=10
 %\usepackage{amssymb}
 \usepackage[noBBpl,sc]{mathpazo}
 \linespread{1.05}
-\usepackage[papersize={7.1in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+\usepackage[papersize={7.1in, 10in}, left=.5in, right=.5in, top=.6in, bottom=1in]{geometry}
 %\usepackage[letterpaper, margin=1.2in]{geometry}
 \tolerance=2000
 \hbadness=2000
