--- a/1505.04753/Diamond-final.tex
+++ b/1505.04753/Diamond-final.tex
@@ -33,14 +33,14 @@ bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
 \usepackage[noBBpl,sc]{mathpazo}
-\usepackage[papersize={7.0in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\usepackage[papersize={7.0in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
 \linespread{1.05}
 \sloppy
 \raggedbottom
 \pagestyle{plain}
 
 % these include amsmath and that can cause trouble in older docs.
-\input{../helpers/minion_sum}
+\input{../helpers/cmrsum}
 \input{../helpers/fix-underbrace.tex}
 
 % make sure there is enough TOC for reasonable pdf bookmarks.
